--- a/blogHomepage.css
+++ b/blogHomepage.css
@@ -4,10 +4,12 @@
   margin: 0;
   background-color:rgb(172, 204, 180, 0.8);
   font-family: "Work Sans", sans-serif;
+  
 }
 
 body {
   background-color: rgb(172, 204, 180, 0.8);
+  
 }
 
 article {
@@ -20,6 +22,10 @@ article {
   border: solid 0.5px #52b69a;
   border-radius: 5px;
   padding: 1.5em;
+  background-image: url('anonoblog.png');
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: 250px 150px;
 }
 
 div > article > h1 {
